--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "gray-matter": "^4.0.3",
     "embla-carousel-react": "^8.6.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "framer-motion": "^12.23.15",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
